14Nov01=======================================================================
1. make the number of characters of the dx comment dependant on the type of
connection. This should mean that 'legacy' user programs can cope.
07Nov01=======================================================================
1. fix is_pctext so that it actually catches corrupt spots and announces.
2. fix console.pl so that you can type in '0' again
3. Fix problem with reply disappearing up its own bottom.
4. Added Steve's latest sh/moon stuff
06Nov01=======================================================================
1. fix read so that sysop reading doesn't increment the read counter for 
private mail not addressed to them.
2. fix console.pl to show blank lines more reliably.
3. fix msgs so that 2 R: lines are only stored on initial entry (not just
after forwarding).
04Nov01=======================================================================
1. Allow the user to equal the node in RSPF checks (this allows spots and 
stuff with the origin and spotter to be the same (although it is STRONGLY 
recommended that they are NOT!!! [hint hint]).
2. make the send command rather more sensitive to what is allowed. Basically
it will only allow TO addresses that are bull addresses (if not private) or
vaild callsigns (if private). Bull addresses are the ones in 
/spider/msg/forward.pl with a 'T' flag on them. If there is no forward 
file it will only allow 'ALL' and 'DX' as valid Bull TO addresses. You may
use commas as callsign separators if you like.  
02Nov01=======================================================================
1. fixed some Aliasing problems, but this whole area will have to be addressed
more comprehensively.
2. Changed talk logging so that it hopefully is more consistant and maybe even
useful.
3. Altered the mechanism of the personal emailing so that it uses lower level
components and should be therefore available on M$ platforms. You will need