@@ -1,6 +1,7 @@
 14Nov01=======================================================================
 1. make the number of characters of the dx comment dependant on the type of
 connection. This should mean that 'legacy' user programs can cope.
+2. move the handling of unprintable characters out of IntMsg
 07Nov01=======================================================================
 1. fix is_pctext so that it actually catches corrupt spots and announces.
 2. fix console.pl so that you can type in '0' again
